<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llyt_bottom_operate_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/operatingButtonHeight1"
        android:layout_weight="1"
        android:background="@color/negative_button_background"
        android:text="@string/cancel"
        android:textColor="@color/textPrimary" />

    <Button
        android:id="@+id/btn_last"
        android:layout_width="0dp"
        android:layout_height="@dimen/operatingButtonHeight1"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:text="@string/last"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="@dimen/operatingButtonHeight1"
        android:layout_weight="1"
        android:background="@color/negative_button_background"
        android:text="@string/next"
        android:textColor="@color/textPrimary" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/operatingButtonHeight1"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />
</LinearLayout>