<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/operatingButtonHeight"
        android:orientation="vertical">

        <include layout="@layout/include_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            style="@style/LineStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_picking_by_trace_id"
                android:layout_width="0dp"
                android:layout_height="@dimen/operatingButtonHeight"
                android:layout_weight="5"
                android:background="@color/negative_button_background"
                android:text="@string/picking_by_trace_id"
                android:textColor="@color/textPrimary" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_picking_by_order"
                android:layout_width="0dp"
                android:layout_height="@dimen/operatingButtonHeight"
                android:layout_weight="5"
                android:background="@color/negative_button_background"
                android:text="@string/picking_by_order"
                android:textColor="@color/textPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            style="@style/LineStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_picking_by_wave"
                android:layout_width="0dp"
                android:layout_height="@dimen/operatingButtonHeight"
                android:layout_weight="5"
                android:background="@color/negative_button_background"
                android:text="@string/picking_by_wave"
                android:textColor="@color/textPrimary" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_picking_by_manual"
                android:layout_width="0dp"
                android:layout_height="@dimen/operatingButtonHeight"
                android:layout_weight="5"
                android:background="@color/negative_button_background"
                android:text="@string/picking_by_manual"
                android:textColor="@color/textPrimary" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/include_progress_bar" />
</RelativeLayout>